fix layout issues

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -454,7 +454,7 @@ footer.sticky-bottom {
   }
 
   .grid-sizer, .grid-item {
-    width: 250px;
+    width: 220px;
     margin-bottom: 10px;
   }
 
